deployment-scripts/staging/reelcruit-candidate-be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-be-staging-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: staging.api.reelcruit.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reelcruit-backend-staging-svc
              port:
                number: 5001

    - host: www.staging.api.reelcruit.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reelcruit-backend-staging-svc
              port:
                number: 5001
